tests/ui/diagnostic_namespace/on_unimplemented/broken_format.stderr
warning: unmatched `}` found
  --> $DIR/broken_format.rs:2:42
   |
LL | #[diagnostic::on_unimplemented(message = "{{Test } thing")]
   |                                          ^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(malformed_diagnostic_format_literals)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: positional format arguments are not allowed here
  --> $DIR/broken_format.rs:6:49
   |
LL | #[diagnostic::on_unimplemented(message = "Test {}")]
   |                                                 ^
   |
   = help: only named format arguments with the name of one of the generic types are allowed in this context

warning: invalid format specifier
  --> $DIR/broken_format.rs:10:50
   |
LL | #[diagnostic::on_unimplemented(message = "Test {1:}")]
   |                                                  ^
   |
   = help: no format specifier are supported in this position

warning: positional format arguments are not allowed here
  --> $DIR/broken_format.rs:10:49
   |
LL | #[diagnostic::on_unimplemented(message = "Test {1:}")]
   |                                                 ^
   |
   = help: only named format arguments with the name of one of the generic types are allowed in this context

warning: invalid format specifier
  --> $DIR/broken_format.rs:15:53
   |
LL | #[diagnostic::on_unimplemented(message = "Test {Self:123}")]
   |                                                     ^^^^
   |
   = help: no format specifier are supported in this position

warning: invalid format specifier
  --> $DIR/broken_format.rs:19:53
   |
LL | #[diagnostic::on_unimplemented(message = "Test {Self:!}")]
   |                                                     ^^
   |
   = help: no format specifier are supported in this position

warning: invalid format specifier
  --> $DIR/broken_format.rs:23:53
   |
LL | #[diagnostic::on_unimplemented(message = "Test {Self:}")]
   |                                                     ^
   |
   = help: no format specifier are supported in this position

error[E0277]: {{Test } thing
  --> $DIR/broken_format.rs:36:13
   |
LL |     check_1(());
   |     ------- ^^ the trait `ImportantTrait1` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/broken_format.rs:4:1
   |
LL | trait ImportantTrait1 {}
   | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `check_1`
  --> $DIR/broken_format.rs:28:20
   |
LL | fn check_1(_: impl ImportantTrait1) {}
   |                    ^^^^^^^^^^^^^^^ required by this bound in `check_1`

error[E0277]: Test {}
  --> $DIR/broken_format.rs:38:13
   |
LL |     check_2(());
   |     ------- ^^ the trait `ImportantTrait2` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/broken_format.rs:8:1
   |
LL | trait ImportantTrait2 {}
   | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `check_2`
  --> $DIR/broken_format.rs:29:20
   |
LL | fn check_2(_: impl ImportantTrait2) {}
   |                    ^^^^^^^^^^^^^^^ required by this bound in `check_2`

error[E0277]: Test {1}
  --> $DIR/broken_format.rs:40:13
   |
LL |     check_3(());
   |     ------- ^^ the trait `ImportantTrait3` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/broken_format.rs:13:1
   |
LL | trait ImportantTrait3 {}
   | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `check_3`
  --> $DIR/broken_format.rs:30:20
   |
LL | fn check_3(_: impl ImportantTrait3) {}
   |                    ^^^^^^^^^^^^^^^ required by this bound in `check_3`

error[E0277]: Test ()
  --> $DIR/broken_format.rs:42:13
   |
LL |     check_4(());
   |     ------- ^^ the trait `ImportantTrait4` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/broken_format.rs:17:1
   |
LL | trait ImportantTrait4 {}
   | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `check_4`
  --> $DIR/broken_format.rs:31:20
   |
LL | fn check_4(_: impl ImportantTrait4) {}
   |                    ^^^^^^^^^^^^^^^ required by this bound in `check_4`

error[E0277]: Test ()
  --> $DIR/broken_format.rs:44:13
   |
LL |     check_5(());
   |     ------- ^^ the trait `ImportantTrait5` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/broken_format.rs:21:1
   |
LL | trait ImportantTrait5 {}
   | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `check_5`
  --> $DIR/broken_format.rs:32:20
   |
LL | fn check_5(_: impl ImportantTrait5) {}
   |                    ^^^^^^^^^^^^^^^ required by this bound in `check_5`

error[E0277]: Test ()
  --> $DIR/broken_format.rs:46:13
   |
LL |     check_6(());
   |     ------- ^^ the trait `ImportantTrait6` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/broken_format.rs:25:1
   |
LL | trait ImportantTrait6 {}
   | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `check_6`
  --> $DIR/broken_format.rs:33:20
   |
LL | fn check_6(_: impl ImportantTrait6) {}
   |                    ^^^^^^^^^^^^^^^ required by this bound in `check_6`

error: aborting due to 6 previous errors; 7 warnings emitted

For more information about this error, try `rustc --explain E0277`.
